examples/negative/type_name_collision/import_collision/lib.kai
pub type Widget[k, v] = WLeaf | WNode(k, v, Widget[k, v], Widget[k, v])

pub fn empty_widget() : Widget[Int, Int] = WLeaf
